<resources>
    <string name="app_name">NMedia</string>
    <string name="avatar_img" translatable="false">avatar_img</string>
    <string name="menu" translatable="false">menu</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="emoji" translatable="false">emoji</string>
    <string name="send" translatable="false">send</string>
    <string name="input_message">Message</string>
    <string name="edit_message">Edit Message</string>
    <string name="cancel">Cancel</string>
    <string name="edit_mode" translatable="false" >edit_mode</string>
    <string name="save" translatable="false">save</string>
    <string name="preview" translatable="false">preview</string>
    <string name="play" translatable="false">play</string>
    <string name="new_post" translatable="false">new_post</string>
    <string name="post_item_scroll" translatable="false">post_item_scroll</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="loading">LOADING</string>
    <string name="posts_is_empty">"There are no posts on this wall.\nAdd your new post right now."</string>
    <string name="error" translatable="false">error</string>
    <string name="try_again">Try again</string>
    <string name="unsupported">Unsupported function</string>
    <string name="attachment" translatable="false">attachment</string>
    <string name="new_posts">New posts</string>
    <string name="back">Back</string>
    <string name="post_editor">Post editor</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="signout">SignOut</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
</resources>