<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.AuthFragment">

    <ImageView
        android:id="@+id/avatarPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameField"
        app:layout_constraintDimensionRatio="V,1:1"
        app:layout_constraintEnd_toEndOf="@+id/firstNameField"
        app:layout_constraintStart_toStartOf="@+id/loginField"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/avatar_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="@dimen/common_spacing"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/loginField"
        app:layout_constraintTop_toBottomOf="@+id/avatarPreview"
        tools:layout_editor_absoluteX="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="@dimen/common_spacing"
        android:hint="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintTop_toBottomOf="@+id/firstNameField"
        tools:layout_editor_absoluteX="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="@dimen/common_spacing"
        android:hint="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginField"
        tools:layout_editor_absoluteX="48dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/takeAvatarPhoto"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/photo"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="@+id/pickAvatarPhoto"
        app:layout_constraintEnd_toStartOf="@+id/pickAvatarPhoto" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/pickAvatarPhoto"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/gallery"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintBottom_toBottomOf="@+id/avatarPreview"
        app:layout_constraintEnd_toEndOf="@+id/avatarPreview" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/singUpGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="avatarPreview,takeAvatarPhoto,pickAvatarPhoto,firstNameField" />


</androidx.constraintlayout.widget.ConstraintLayout>