<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.NewPostFragment">


    <EditText
        android:id="@+id/msgInputText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoLink="web"
        android:background="@android:color/transparent"
        android:gravity="top|start"
        android:hint="@string/input_message"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textWebEditText"
        android:linksClickable="true"
        android:padding="16dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/takePhoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/photo"
            android:src="@drawable/ic_baseline_photo_camera_24" />

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/pickPhoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/gallery"
            android:src="@drawable/ic_baseline_image_24" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>